[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/components/player/body/needles/needle/PlayerNeedle.gd" type="Script" id=1]
[ext_resource path="res://scenes/components/player/body/needles/audios/sliding.wav" type="AudioStream" id=2]
[ext_resource path="res://scenes/components/player/body/needles/needle/textures/needle.png" type="Texture" id=3]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "hide"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 15 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "show"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 15 ), Vector2( 0, 0 ) ]
}

[node name="PlayerNeedle" type="Area2D"]
collision_layer = 32
collision_mask = 12
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Collision" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( 0, -23.5 )
polygon = PoolVector2Array( 0, -7.5, -8, 7.5, 8, 7.5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Body" type="Polygon2D" parent="."]
color = Color( 1, 1, 1, 0 )
polygon = PoolVector2Array( -8, -16, 0, -31, 8, -16 )
__meta__ = {
"_edit_lock_": true
}

[node name="Needle" type="Sprite" parent="Body"]
position = Vector2( 0.5, -23 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Visible" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/hide = SubResource( 3 )
anims/show = SubResource( 2 )

[node name="Positions" type="Tween" parent="."]

[node name="Size" type="Tween" parent="."]

[node name="SlidingShow" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = -20.0
pitch_scale = 2.0
__meta__ = {
"_edit_lock_": true
}

[node name="SlidingHide" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = -30.0
pitch_scale = 4.0
__meta__ = {
"_edit_lock_": true
}

[connection signal="area_entered" from="." to="." method="_on_PlayerNeedle_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_PlayerNeedle_area_exited"]
